# DCluttr

./: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: main.py
backend/api/: devices.py  scan.py
backend/core/: hasher.py  scanner.py
backend/db/: database.py  models.py
frontend/electron/: main.ts  preload.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ProgressStream.tsx
frontend/src/pages/: Dashboard.tsx  DeviceManager.tsx  ScanIndex.tsx
frontend/src/store/: useAppStore.ts
