[tool.poetry]
name = "dcluttr-backend"
version = "0.1.0"
description = "DCluttr backend - cross-device digital document management"
authors = ["DCluttr Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
websockets = "^12.0"
imagehash = "^4.3.1"
Pillow = "^10.2.0"
openai = "^1.10.0"
paramiko = "^3.4.0"
pdfplumber = "^0.10.3"
python-docx = "^1.1.0"
sentence-transformers = "^2.3.1"
numpy = "^1.26.3"
psutil = "^5.9.7"
python-magic = "^0.4.27"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
